[package]
name = "lib_transferwise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = { version = "2", features = ["actix_extras","chrono","json"] }
actix-web = { version="4",features=["rustls"] }
tracing = {version= "0.1",features=["log"] }
macros_create_app = {path="../macros_create_app"}
macros_make_scope = {path="../macros_make_scope"}
macros_make_error = {path="../macros_make_error"}
my_schema = {path="../my_schema"}


